<resources>
    <string name="app_name">ProfileForm</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="phone_number">Phone Number</string>
    <string name="button_edit_image">Edit Image</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="text_view_full_name">Full Name</string>
    <string name="text_view_phone_number">Phone Number</string>
</resources>