<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/purple_500"/>

            <TextView
                android:id="@+id/text_view_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/text_view_full_name"
                android:textSize="22dp"/>

            <TextView
                android:id="@+id/text_view_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/text_view_phone_number"
                android:textSize="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit_image"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:text="@string/button_edit_image"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:backgroundTint="#F7E9F6"
                app:strokeColor="@color/black"
                app:strokeWidth="2px"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name_text_input"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:hint="@string/full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/full_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/age_text_input"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:hint="@string/age">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/age_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_text_input"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:hint="@string/location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/location_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_text_input"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:backgroundTint="#F7E9F6"
                    android:text="@string/button_save"
                    android:textColor="@color/black"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2px" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>